# Dungeon

./: .clang-format  .editorconfig  Borisov_Vanya_lb5.odt  Borisov_Vanya_lb6.odt  CMakeLists.txt  diagram.xmi  idea  main.cpp  new_diagram.xmi
src/: CMakeLists.txt  WorldManager.cpp  WorldManager.hpp  main.cpp
src/Command/Factory/: CommandFactory.cpp  CommandFactory.hpp
src/Command/Gameplay/: ChangeFieldSize.cpp  ChangeFieldSize.hpp  ChangeGameDifficulty.cpp  ChangeGameDifficulty.hpp  ChangeGameParameters.cpp  ChangeGameParameters.hpp  ChangeGameSize.cpp  ChangeGameSize.hpp  CreateSession.cpp  CreateSession.hpp  MovePlayer.cpp  MovePlayer.hpp  RestartSession.cpp  RestartSession.hpp  Resume.cpp  Resume.hpp  ResumeGame.cpp  ResumeGame.hpp
src/Command/Include/: Defines.hpp
src/Command/Interface/: Interface.hpp
src/Command/Movement/: MovePlayer.cpp
src/Command/System/: GameOptions.cpp  GameOptions.hpp  GoToSettings.cpp  GoToSettings.hpp  NOP.cpp  NOP.hpp  OpenDifficultyOptions.cpp  OpenDifficultyOptions.hpp  OpenHoldMenu.cpp  OpenHoldMenu.hpp  OpenMainMenu.cpp  OpenMainMenu.hpp  OpenPlayMenu.cpp  OpenPlayMenu.hpp  OpenSizeOptions.cpp  OpenSizeOptions.hpp  ReturnToMenu.cpp  ReturnToMenu.hpp  TerminateProgram.cpp  TerminateProgram.hpp  TriggerHoldMenu.cpp  TriggerHoldMenu.hpp  TriggerPlayMenu.cpp  TriggerPlayMenu.hpp
src/Draw/: Tracker.cpp  Tracker.hpp
src/Draw/Interface/: Interface.hpp
src/Draw/SFML/: Button.cpp  Button.hpp  GameRenderer.cpp  GameRenderer.hpp  PlayerStatistic.cpp  PlayerStatistic.hpp  RenderSlave.hpp  Settings.hpp  SfmlRenderer.cpp  SfmlRenderer.hpp  SimpleMenu.cpp  SimpleMenu.hpp
src/Entities/: Bot.cpp  Bot.hpp  Player.cpp  Player.hpp
src/Entities/Interface/: EntityInterface.hpp
src/Entities/Player/: Player.cpp  Player.hpp
src/Event/: Potion.cpp  Potion.hpp  RandomMine.cpp  RandomMine.hpp  Spikes.cpp  Spikes.hpp
src/Event/Factory/: EventFactory.cpp  EventFactory.hpp
src/Event/Interface/: EventInterface.hpp
src/Event/MovementEvents/: Door.cpp  Door.hpp  Key.cpp  Key.hpp  RandomMine.cpp  RandomMine.hpp
src/Event/NegativeEvents/: Spikes.cpp  Spikes.hpp
src/Event/PositiveEvents/: Potion.cpp  Potion.hpp  ShieldKit.cpp  ShieldKit.hpp  Star.cpp  Star.hpp
src/GUI/: Window.cpp  Window.hpp
src/GUI/Menus/: ActionTextButton.cpp  ActionTextButton.hpp  GameFieldDrawer.cpp  GameFieldDrawer.hpp  MainMenu.cpp  MainMenu.hpp  Menu.cpp  Menu.hpp  PlayMenu.cpp  PlayMenu.hpp  Renderer.hpp  TILE_TYPES.hpp
src/GUI/Menus/Interface/: Menu.hpp
src/Game/: GameEngine.cpp  GameEngine.hpp  GameObserver.hpp  GameState.cpp  GameState.hpp
src/Game/Engine/: GameEngine.cpp  GameEngine.hpp
src/Game/State/: DifficultyChangeState.cpp  DifficultyChangeState.hpp  GameState.hpp  HoldState.cpp  HoldState.hpp  LoseState.cpp  LoseState.hpp  MainMenuState.cpp  MainMenuState.hpp  PlayMenuState.cpp  PlayMenuState.hpp  PlayingState.cpp  PlayingState.hpp  SettingsState.cpp  SettingsState.hpp  SizeChangeState.cpp  SizeChangeState.hpp  TerinateState.cpp  TerminateState.cpp  TerminateState.hpp  WinState.cpp  WinState.hpp
src/Handlers/Interface/: MapObserver.hpp  Subject.hpp
src/Handlers/MapHandler/: MapHandler.cpp  MapHandler.hpp
src/Handlers/PlayerHandler/: PlayerHandler.cpp  PlayerHandler.hpp
src/Input/: example
src/Input/Base/: InputClass.cpp  InputClass.hpp
src/Input/File/: FileInput.cpp  FileInput.hpp  available
src/Input/Interface/: InputClass.hpp
src/Input/SFML/: SFMLInput.cpp  SFMLInput.hpp  SfmlInput.cpp  SfmlInput.hpp
src/MapGenerator/DefaultLevels/: DefaultLevelGenerator.hpp
src/MapGenerator/Level_1/: GenerateLevel1.cpp  GenerateLevel1.hpp
src/MapGenerator/MediumMap/: MediumMap.cpp  MediumMap.hpp
src/MapGenerator/RandomLevelGen/: Generator.cpp  Generator.hpp
src/MapGenerator/SmallMap/: SmallMap.cpp  SmallMap.hpp
src/Math/: Vector2.hpp
src/Movement/: Direction.cpp  Direction.hpp
src/Random/: Random.cpp  Random.hpp
src/World/: Cell.cpp  Cell.hpp  GameField.cpp  GameField.hpp  Map.cpp  Map.hpp
src/features/Entities/Player/: Player.cpp
src/features/Event/: Defines.hpp
src/features/Event/Factory/: EventFactory.cpp  EventFactory.hpp
src/features/Event/MovementEvents/: Door.cpp  Key.hpp
src/features/Event/NegativeEvents/: Spikes.cpp
src/features/Event/PositiveEvents/: ShieldKit.cpp  Star.cpp
src/features/Handlers/Interface/: MapSubject.hpp
src/features/Handlers/PlayerHandler/: PlayerHandler.cpp  PlayerHandler.hpp
src/features/MapGenerator/DefaultLevels/: DefaultLevelGenerator.cpp
src/features/MapGenerator/RandomLevelGen/: Generator.cpp  Generator.hpp
src/features/Movement/: Aliases.hpp
src/features/Profiler/: Timer.cpp  Timer.hpp
src/features/Random/: Random.cpp
src/features/World/: Cell.cpp  Cell.hpp  GameField.cpp  GameField.hpp
src/game_client/: GameObserver.hpp  Path.cpp  Path.hpp
src/game_client/Command/: Defines.hpp  ICommand.hpp
src/game_client/Command/Gameplay/: ChangeDifficulty.cpp  ChangeDifficulty.hpp  ChangeSize.cpp  ChangeSize.hpp  CreateSession.cpp  CreateSession.hpp  MovePlayer.cpp  MovePlayer.hpp  Pause.cpp  Pause.hpp  RestartSession.cpp  RestartSession.hpp  (+2 more)
src/game_client/Engine/: GameEngine.cpp  GameEngine.hpp  GameObserver.hpp
src/game_client/Input/: InputObserver.hpp
src/game_client/Logger/: MessageBus.cpp  MessageBus.hpp
src/game_client/MenuObject/: Menu.cpp  Menu.hpp  MenuEntry.cpp  MenuEntry.hpp
src/game_client/Render/: IRender.hpp  Tracker.cpp  Tracker.hpp
src/game_client/State/: Defines.hpp  IState.hpp  Lose.cpp  Lose.hpp  MainMenu.cpp  MainMenu.hpp  Options.cpp  Options.hpp  Pause.cpp  Pause.hpp  Play.cpp  Play.hpp  PlayMenu.cpp  PlayMenu.hpp  Terminate.cpp  Terminate.hpp  Win.cpp  Win.hpp
tst/: CMakeLists.txt  CellTest.cpp  EventFactoryTest.cpp  FileInputTest.cpp  GameEngineTest.cpp  GameFieldTest.cpp  GenerateLevel1Test.cpp  MapTest.cpp  MediumMapTest.cpp  PlayerHandlerTest.cpp  PlayerTest.cpp  PotionTest.cpp  RandomLevelGenTest.cpp  RandomMineTest.cpp  SmallMapTest.cpp  SpikesTest.cpp  binds  test_1  test_2  test_3  test_4  test_5  test_6  test_game_engine_1
(+118 files in other folders)
